tests/baselines/reference/umdNamespaceMergedWithGlobalAugmentationIsNotCircular.errors.txt
tests/cases/compiler/global.d.ts(2,11): error TS2451: Cannot redeclare block-scoped variable 'React'.
tests/cases/compiler/module.d.ts(2,21): error TS2451: Cannot redeclare block-scoped variable 'React'.


==== tests/cases/compiler/global.d.ts (1 errors) ====
    declare global {
        const React: typeof import("./module");
              ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'React'.
!!! related TS6203 /.src/tests/cases/compiler/module.d.ts:2:21: 'React' was also declared here.
    }
    
    export { };
    
==== tests/cases/compiler/module.d.ts (1 errors) ====
    export = React;
    export as namespace React;
                        ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'React'.
!!! related TS6203 tests/cases/compiler/global.d.ts:2:11: 'React' was also declared here.
    
    declare namespace React {
        function createRef(): any;
    }
    
==== tests/cases/compiler/some_module.ts (0 errors) ====
    export { };
    React.createRef;
    
==== tests/cases/compiler/emits.ts (0 errors) ====
    console.log("hello");
    React.createRef;
    